# freight-container

./: Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  freight-container.spec  freight.spec  index.html  params.json
doc/: HOWTO.md  freight-agent.1  freight-agent.config  freight-builder.1  freight-cmd.1  freight-network-config.1  freightctl.1  freightproxy.1  table-reference.txt
examples/: container_base.spec  container_httpd.spec
examples/mock/: fedora-28-freight-container-x86_64.cfg  fedora-28-freight-x86_64.cfg
examples/specs/: container_base.spec  container_httpd.spec
examples/test-configs/: freight-agent-admin.config  freight-agent-net.config  freight-agent-node.config  freight-agent-proxy-tennant.config  freight-agent-proxy.config  freight-agent-tennant.config  freight-agent.config  freightctl-admin.config  freightctl-proxy-tennant.config  freightctl-tennant.config
examples/test-configs/postgres/: freight-agent-node.config  freightctl-admin.config  freightproxy.config
examples/test-configs/sqlite/: freight-agent-node.config  freightctl-admin.config  freightproxy.config
examples/test-manifest/: base.manifest  child.manifest  httpd_container.manifest  my_website.manifest  post_install  post_install_child  test.manifest
examples/test-networks/: bridged.conf  private.conf
rpm_macros/: macros.freight
scripts/: createfreightdb-pg.sh  createfreightdb-sqlite.sh  createfreightdb.sh  createtennant-pg.sh  createtennant-sqlite.sh  createtennant.sh  freight-cmd
selinux/: my-dbusdaemon.pp  my-groupadd.pp  my-setupsh.pp  my-systemd.pp  my-useradd.pp
src/: Makefile.am  freight-common.c  main.c  manifest.c  manifest.h
src/freight-agent/: Makefile.am  freight-config.c  freight-config.h  freight-db.c  freight-db.h  freight-log.h  freight-net-addrs.c  freight-networks-private.h  freight-networks.c  freight-networks.h  freightctl_main.c  freightproxy_main.c  global-config.c  global-config.h  main.c  mode.c  mode.h  nodb.c  node.c  node.h  postgres-db.c  proxy_handlers.c  proxy_handlers.h  scheduler.c  scheduler.h  sqlite-db.c  xmlrpc_client.c
src/freight-builder/: Makefile.am  dnf.c  main.c  manifest.c  manifest.h  package.c  package.h  yum.c
src/include/: freight-common.h  freight-log.h
src/tests/: Makefile.am  test-int.c
test-manifest/: base.manifest  test.manifest
